--- a/src/Component/Exercises/Exercises.css
+++ b/src/Component/Exercises/Exercises.css
@@ -24,25 +24,14 @@
     gap: 10px;
     margin-top: 50px;
 }
-
-@media (max-width: 575.98px)  { 
-    .image{
-        width: 30px;
-        height: 30px;
-    }
-    .header h2{
-        font-size: 20px;
-    }
-    .exercise-div h3{
-        font-size: 15px;
-    }
+@media screen and (min-width: 769px) and (max-width: 1024px) { 
     .activities-container{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: 8px;
+        grid-template-columns: repeat(2,1fr);
+        gap: 15px;
     }
-}
-@media (max-width: 767.98px) { 
+  }
+/* tablet */
+@media screen and (min-width: 576px) and (max-width: 768px)  { 
     .image{
         width: 20px;
         height: 20px;
@@ -54,15 +43,24 @@
         font-size: 12px;
     }
     .activities-container{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(2,1fr);
         gap: 8px;
     }
  }
- @media (max-width: 991.98px) { 
-    .activities-container{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        gap: 15px;
+/* mobile */
+@media (max-width: 575px)  { 
+    .image{
+        width: 30px;
+        height: 30px;
     }
-  }
+    .header h2{
+        font-size: 20px;
+    }
+    .exercise-div h3{
+        font-size: 15px;
+    }
+    .activities-container{
+        grid-template-columns: repeat(1,1fr);
+        gap: 8px;
+    }
+}
