--- a/src/Component/Exercises/Exercises.css
+++ b/src/Component/Exercises/Exercises.css
@@ -1,8 +1,8 @@
-.exercises-container{
+/* .exercises-container{
     margin: auto;
-    width: 60%;
-}
-.header{
+    width: 70%;
+} */
+/* .header{
     display: flex;
     margin-top: 35px;
     align-items: flex-start;
@@ -21,7 +21,7 @@
 .activities-container{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    gap: 10px;
+    gap: 15px;
     margin-top: 50px;
 }
 @media screen and (min-width: 769px) and (max-width: 1024px) { 
@@ -29,9 +29,9 @@
         grid-template-columns: repeat(2,1fr);
         gap: 15px;
     }
-  }
+  } */
 /* tablet */
-@media screen and (min-width: 576px) and (max-width: 768px)  { 
+/* @media screen and (min-width: 576px) and (max-width: 768px)  { 
     .image{
         width: 20px;
         height: 20px;
@@ -46,9 +46,9 @@
         grid-template-columns: repeat(2,1fr);
         gap: 8px;
     }
- }
+ } */
 /* mobile */
-@media (max-width: 575px)  { 
+/* @media (max-width: 575px)  { 
     .image{
         width: 30px;
         height: 30px;
@@ -63,4 +63,4 @@
         grid-template-columns: repeat(1,1fr);
         gap: 8px;
     }
-}
+} */
