--- a/src/Component/Exercises/Exercises.css
+++ b/src/Component/Exercises/Exercises.css
@@ -1,3 +1,35 @@
+.logo-image{
+    width: 40px;
+    height: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .exercises-container{
     margin: auto;
     width: 70%;
