json data display in card

--- a/src/Component/Exercise/Exercise.css
+++ b/src/Component/Exercise/Exercise.css
@@ -1,4 +1,4 @@
-.activity{
+/* .activity{
     padding: 10px;
     border-radius: 10px;
 }
@@ -27,4 +27,4 @@
         width: 180px;
         height: 180px;
     }
-}
+} */
