--- a/src/Component/Main/Main.css
+++ b/src/Component/Main/Main.css
@@ -3,6 +3,13 @@
     padding-top: 0px !important;
 
 }
+@media screen and (min-width: 0px) and (max-width: 1024px) {
+    .main-container{
+        margin-right: 0px !important;
+        padding-top: 0px !important;
+    
+    }
+}
 
 
 
